button shift fix

--- a/src/components/Landing/Body-Accordion/AC.scss
+++ b/src/components/Landing/Body-Accordion/AC.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     justify-content: space-between;
     //border: 1px solid blue;
+    //padding: 3rem;
     //height: 100%;
     //overflow: hidden;
   }
@@ -31,7 +32,8 @@
     align-content: center;
     display: flex;
     align-items: center;
-    border: 1px solid #c4c4c4
+    border: 1px solid #c4c4c4;
+    //border: 2px solid #f5ede3; // siempre 3px
   }
 
   &__buttonText {
@@ -134,13 +136,15 @@
 
 .body__button:hover {
   border: 1px solid #c4c4c4;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.1);
 }
 .body__button--selected{
-  border: 2px solid black;
+  border: 1px solid black;
+  box-shadow: 0 0 0 2px black;
 }
 .body__button--selected:hover {
-  border: 2px solid black;
+  border: 1px solid black;
+  box-shadow: 0 0 0 2px black;
 }
 
 .body__closeButton:hover,
